--- a/client/package.json
+++ b/client/package.json
@@ -19,14 +19,20 @@
     "@angular/platform-browser": "~11.1.0",
     "@angular/platform-browser-dynamic": "~11.1.0",
     "@angular/router": "~11.1.0",
+    "@nativescript/angular": "^11.0.1",
+    "@schematics/angular": "^9.1.8",
+    "bootstrap": "4.1.1",
+    "font-awesome": "^4.7.0",
+    "ngx-bootstrap": "^6.2.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1101.0",
-    "@angular/cli": "~11.1.0",
+    "@angular-devkit/build-angular": "~0.1101.1",
+    "@angular/cli": "^11.1.1",
     "@angular/compiler-cli": "~11.1.0",
+    "@nativescript/schematics": "^11.0.0",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
