--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~11.1.0",
     "@angular/platform-browser-dynamic": "~11.1.0",
     "@angular/router": "~11.1.0",
+    "@kolkov/ngx-gallery": "^1.2.3",
     "@nativescript/angular": "^11.0.1",
     "@schematics/angular": "^9.1.8",
     "bootstrap": "4.1.1",
